--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Material+Icons"
     />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <script src="https://www.google.com/recaptcha/api.js"></script>
   </head>
   <body>
     <noscript>
